# libfunnel-rs

./: Cargo.toml  LICENSE.md  Makefile  README.md  build.rs
examples/: test-vk.c  vk_ash.rs
include/: wrapper.h
shaders/: triangle_frag.frag  triangle_frag.spv  triangle_vert.spv  triangle_vert.vert
src/: bindings.rs  lib.rs
